--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,16 +2,20 @@ project:
   type: website
 
 website:
-  title: "0000_Pagina_web_Github"
+  title: "Eines de l'Institut Metròpoli"
   navbar:
     left:
       - href: index.qmd
         text: Home
       - about.qmd
+      - visualitzacio.qmd
+      - analisis.qmd
+      - tractament.qmd
+      - organitzacio.qmd
 
 format:
   html:
-    theme: cosmo
+    theme: pulse
     css: styles.css
     toc: true
 
