--- a/_quarto.yml
+++ b/_quarto.yml
@@ -15,7 +15,9 @@ website:
 
 format:
   html:
-    theme: pulse
+    theme: 
+      light: pulse
+      dark: solar
     css: styles.css
     toc: true
 
